--- a/app/src/main/res/layout/activity_second_main.xml
+++ b/app/src/main/res/layout/activity_second_main.xml
@@ -4,10 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:context=".SecondMainActivity"
-    android:background="@color/black">
-
-
+    tools:context=".SecondMainActivity">
+    
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
