--- a/app/src/main/res/values-night-v26/themes.xml
+++ b/app/src/main/res/values-night-v26/themes.xml
@@ -16,4 +16,8 @@
         <!-- Customize your theme here. -->
         <item name="android:autofilledHighlight">@android:color/transparent</item>
     </style>
+
+    <style name="mySpinnerItemStyle" parent="@android:style/Widget.Holo.DropDownItem.Spinner">
+        <item name="android:textColor">@color/white</item>
+    </style>
 </resources>
