--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="nice_purple">#5000ca</color>
+    <color name="light_grey">#222222</color>
+    <color name="darkmode_grey">#121212</color>
+
 </resources>
