Dodal gumb za konc treninga, ki še ne doda treninga v bazo. Dodal nekaj metod v razredu Training

--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -180,6 +180,20 @@
             app:layout_constraintTop_toBottomOf="@+id/cb_exercise_timer"
             tools:visibility="visible" />
 
+        <Button
+            android:id="@+id/btn_finish_training"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/finish_training"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_add_exercise"
+            app:layout_constraintVertical_bias="0.145"
+            tools:visibility="visible" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
