--- a/app/src/main/res/layout/activity_second_main.xml
+++ b/app/src/main/res/layout/activity_second_main.xml
@@ -19,6 +19,7 @@
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_navigation"
         app:itemIconTint="@color/bottom_navigation_selector"
+        app:itemTextColor="@color/bottom_navigation_selector"
         android:background="@color/black"
 
         />
