--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,10 +47,9 @@
         android:layout_marginRight="32dp"
         android:background="@drawable/rounded_corner"
         android:drawableStart="@drawable/ic_person"
-        android:drawableLeft="@drawable/ic_person"
         android:drawablePadding="10dp"
         android:hint="Email"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:paddingLeft="7dp"
         android:paddingRight="7dp"
         android:textColor="@color/black"
@@ -71,7 +70,6 @@
         android:layout_marginRight="32dp"
         android:background="@drawable/rounded_corner"
         android:drawableStart="@drawable/ic_lock"
-        android:drawableLeft="@drawable/ic_lock"
         android:drawablePadding="10dp"
         android:hint="Password"
         android:inputType="textPassword"
@@ -96,7 +94,7 @@
         android:layout_marginRight="110dp"
         android:background="@color/nice_purple"
         android:padding="15dp"
-        android:text="Sign in"
+        android:text="@string/sign_in_text"
         android:textAllCaps="false"
         android:textSize="14sp"
         app:backgroundTint="@color/nice_purple"
@@ -110,11 +108,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
         android:layout_marginTop="64dp"
-        android:text="Basketball training..."
+        android:text="@string/app_title"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -128,7 +125,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="128dp"
         android:layout_marginRight="128dp"
-        android:text="New User? Register Now"
+        android:text="@string/register_text"
         android:textColor="@color/nice_purple"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
