--- a/app/src/main/res/layout/activity_second_main.xml
+++ b/app/src/main/res/layout/activity_second_main.xml
@@ -20,7 +20,7 @@
         app:menu="@menu/bottom_navigation"
         app:itemIconTint="@color/bottom_navigation_selector"
         app:itemTextColor="@color/bottom_navigation_selector"
-        android:background="@color/black"
+        android:background="@color/light_grey"
 
         />
 
