--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -1,209 +1,234 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/dark_grey"
+    >
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clExercise0"
-        android:layout_width="413dp"
-        android:layout_height="736dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/add_training_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:menu="@menu/add_training_toolbar"
+        app:title="Add training"
+        app:titleTextColor="?attr/colorOnSecondary" />
+
+        <EditText
+            android:layout_marginHorizontal="15sp"
+            android:layout_below="@+id/add_training_toolbar"
+            android:id="@+id/edit_training_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/hint_training_title"
+            android:padding="15sp"
+            android:singleLine="true"
+            android:background="@drawable/edit_text_bottom_line"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textCursorDrawable="@null"/>
+
+
+    <LinearLayout
+        android:layout_marginHorizontal="15sp"
+        android:layout_below="@+id/edit_training_name"
+        android:id="@+id/clExercise0"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
 
         <Spinner
+            android:layout_marginTop="10dp"
             android:id="@+id/exercise_type_sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
+            android:textColor="@color/white"
             android:visibility="visible"
-            app:layout_constrainedWidth="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <EditText
-            android:id="@+id/et_exercise_name"
-            android:layout_width="wrap_content"
+            android:layout_gravity="right"
+            />
+        <LinearLayout
+            android:padding="10dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/exercise_type_sp"
-            tools:visibility="visible" />
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:id="@+id/tw_exercise_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/exercise_name_tw"
+                android:textColor="@color/white"
+                android:visibility="gone"
+                tools:visibility="visible" />
+            <EditText
+                android:layout_marginStart="10dp"
+                android:id="@+id/et_exercise_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:textColor="@color/white"
+                android:background="@drawable/edit_text_bottom_line"
+                android:visibility="gone"
+                tools:visibility="visible"
+                android:textCursorDrawable="@null"/>
+        </LinearLayout>
 
-        <EditText
-            android:id="@+id/et_exercise_descripiton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_exercise_length"
-            tools:visibility="visible" />
-
-        <EditText
-            android:id="@+id/et_exercise_position"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_exercise_descripiton"
-            tools:visibility="visible" />
-
-        <EditText
-            android:id="@+id/et_exercise_repeats"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_exercise_position"
-            tools:visibility="visible" />
-
-        <EditText
-            android:id="@+id/et_exercise_length"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_exercise_name"
-            tools:visibility="visible" />
-
-        <TextView
-            android:id="@+id/tw_exercise_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:text="@string/exercise_name_tw"
-            android:visibility="gone"
-            app:layout_constraintEnd_toStartOf="@+id/et_exercise_name"
-            app:layout_constraintHorizontal_bias="0.49"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/exercise_type_sp"
-            tools:visibility="visible" />
+    <LinearLayout
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tw_exercise_length"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
             android:text="@string/exercise_length_tw"
+            android:textColor="@color/white"
             android:visibility="gone"
-            app:layout_constraintEnd_toStartOf="@+id/et_exercise_length"
-            app:layout_constraintHorizontal_bias="0.509"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tw_exercise_name"
             tools:visibility="visible" />
+
+        <EditText
+            android:layout_marginStart="10dp"
+            android:id="@+id/et_exercise_length"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:textColor="@color/white"
+            android:background="@drawable/edit_text_bottom_line"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:textCursorDrawable="@null"/>
+    </LinearLayout>
+
+
+
+    <LinearLayout
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tw_exercise_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
             android:text="@string/exercise_description_tw"
             android:visibility="gone"
-            app:layout_constraintEnd_toStartOf="@+id/et_exercise_descripiton"
-            app:layout_constraintHorizontal_bias="0.512"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tw_exercise_length"
+            android:textColor="@color/white"
+            tools:visibility="visible"/>
+
+
+        <EditText
+            android:layout_marginStart="10dp"
+            android:id="@+id/et_exercise_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:textColor="@color/white"
+            android:background="@drawable/edit_text_bottom_line"
+            android:visibility="gone"
             tools:visibility="visible" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:id="@+id/position_layout"
+        >
 
         <TextView
             android:id="@+id/tw_exercise_position"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
             android:text="@string/exercise_position_tw"
+            android:textColor="@color/white"
             android:visibility="gone"
-            app:layout_constraintEnd_toStartOf="@+id/et_exercise_position"
-            app:layout_constraintHorizontal_bias="0.482"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tw_exercise_description"
             tools:visibility="visible" />
+        <EditText
+            android:layout_marginStart="10dp"
+            android:id="@+id/et_exercise_position"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:background="@drawable/edit_text_bottom_line"
+            android:textColor="@color/white"
+            android:visibility="gone"
+            tools:visibility="visible" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/tw_exercise_repeats"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
             android:text="@string/exercise_repeats_tw"
+            android:textColor="@color/white"
             android:visibility="gone"
-            app:layout_constraintEnd_toStartOf="@+id/et_exercise_repeats"
-            app:layout_constraintHorizontal_bias="0.483"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tw_exercise_position"
             tools:visibility="visible" />
+        <EditText
+            android:layout_marginStart="10dp"
+            android:id="@+id/et_exercise_repeats"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:textColor="@color/white"
+            android:background="@drawable/edit_text_bottom_line"
+            android:visibility="gone"
+            tools:visibility="visible" />
+    </LinearLayout>
 
         <CheckBox
             android:id="@+id/cb_exercise_timer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:text="@string/exercise_timer_cb"
+            android:textColor="@color/white"
             android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_exercise_repeats"
             tools:visibility="visible" />
-
         <Button
             android:id="@+id/btn_add_exercise"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="124dp"
             android:text="@string/Create_exercise"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cb_exercise_timer"
             tools:visibility="visible" />
 
         <Button
             android:id="@+id/btn_finish_training"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/finish_training"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_add_exercise"
-            app:layout_constraintVertical_bias="0.145"
             tools:visibility="visible" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
+    </LinearLayout>
+    <!--
     <TextView
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/clExercise0"
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/exercise_tw"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        -->
+</RelativeLayout>
