nadaljno urejanje Training fragmneta

--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -1,8 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<RelativeLayout android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <LinearLayout
+        android:background="@color/dark_grey"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/top_of_row_feed"
+        android:orientation="horizontal"
+        >
+        <TextView
+            android:layout_marginStart="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Feed"
+            android:textSize="35sp"
+            android:textColor="@color/white"
+            />
+
+
+
+    </LinearLayout>
+
 <androidx.recyclerview.widget.RecyclerView
+    android:layout_below="@+id/top_of_row_feed"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/recyclerView"
     android:background="@color/dark_grey">
 </androidx.recyclerview.widget.RecyclerView>
+
+</RelativeLayout>
