--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -11,7 +11,7 @@
         android:id="@+id/add_training_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:background="@color/dark_grey"
         android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:menu="@menu/add_training_toolbar"
@@ -19,18 +19,20 @@
         app:titleTextColor="?attr/colorOnSecondary" />
 
     <LinearLayout
+        android:weightSum="8"
         android:orientation="vertical"
         android:layout_below="@+id/add_training_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/add_training_layout">
+        android:id="@+id/add_training_layout"
+        android:layout_marginHorizontal="15dp">
 
         <EditText
             android:id="@+id/edit_training_name"
-
+            android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="15sp"
+
             android:background="@drawable/edit_text_bottom_line"
             android:hint="@string/training_name"
             android:inputType="textShortMessage|textCapSentences"
@@ -42,45 +44,26 @@
 
 
         <androidx.recyclerview.widget.RecyclerView
+            android:layout_weight="6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/exercises_recycler_view"
             >
         </androidx.recyclerview.widget.RecyclerView>
         <Button
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textColor="@color/white"
+            android:background="@drawable/round_ripple"
             android:id="@+id/btn_exercise_add"
             android:text="Add exercise">
         </Button>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/add_training_layout"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginStart="162dp"
-        android:layout_marginTop="56dp"
-        android:layout_marginEnd="161dp"
-        android:text="Button" />
 
-
-    <!--
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/clExercise0"
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/exercise_tw"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
         -->
 </RelativeLayout>
