--- a/app/src/main/res/layout/fragment_add_excercise.xml
+++ b/app/src/main/res/layout/fragment_add_excercise.xml
@@ -11,7 +11,7 @@
         android:id="@+id/add_exercise_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/black"
+        android:background="@color/dark_grey"
         android:elevation="4dp"
         app:layout_constraintTop_toTopOf="parent"
         app:menu="@menu/add_exercise_toolbar"
@@ -183,23 +183,7 @@
             android:textColor="@color/white"
             android:visibility="gone"
             tools:visibility="visible" />
-        <Button
-            android:id="@+id/btn_add_exercise"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="124dp"
-            android:text="@string/Create_exercise"
-            android:visibility="gone"
-            tools:visibility="visible" />
 
-        <Button
-            android:id="@+id/btn_finish_training"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/finish_training"
-            android:visibility="gone"
-            tools:visibility="visible" />
+
     </LinearLayout>
 </RelativeLayout>
