--- a/app/src/main/res/layout/row_exercise.xml
+++ b/app/src/main/res/layout/row_exercise.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
+
+
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:scrollbars="vertical"
     android:padding="20dp"
-    app:cardCornerRadius="20dp">
+    app:cardCornerRadius="20dp"
+    android:clickable="true"
+    android:focusable="true"
+    android:orientation="horizontal"
+    android:background="@drawable/round_ripple"
+    android:layout_marginTop="20dp"
+    >
 
             <TextView
                 android:layout_alignParentStart="true"
@@ -21,7 +28,7 @@
     <TextView
         android:id="@+id/tv_exercise_name"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/tv_number"
         android:paddingLeft="10dp"
         android:text="Ime"
@@ -29,4 +36,4 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
-</androidx.cardview.widget.CardView>
+</RelativeLayout>
