--- a/app/src/main/res/menu/add_training_toolbar.xml
+++ b/app/src/main/res/menu/add_training_toolbar.xml
@@ -2,7 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/profile_toolbar_edit"
+        android:id="@+id/discard_training"
+        android:icon="@drawable/ic_round_close"
+        android:title="Discard"
+        app:showAsAction="ifRoom"
+        >
+    </item>
+    <item
+        android:id="@+id/save_training"
         android:icon="@drawable/ic_check"
         android:title="Save"
         app:showAsAction="ifRoom"
