--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -11,7 +11,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
+        <item name="android:statusBarColor" >@color/dark_grey</item>
+        <item name="android:navigationBarColor">@color/light_grey</item>
         <item name="colorControlHighlight">@color/white</item>
         <!-- Customize your theme here. -->
         <item name="android:autofilledHighlight" tools:targetApi="o">@android:color/transparent</item>
