--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,7 +11,8 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/white</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/dark_grey</item>
+        <item name="android:navigationBarColor" tools:targetApi="l">@color/light_grey</item>
 
         <item name="android:color" tools:targetApi="l">@color/black</item>
         <!-- Customize your theme here. -->
