--- a/app/src/main/res/layout/row_feed.xml
+++ b/app/src/main/res/layout/row_feed.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/dark_grey"
-    android:layout_marginBottom="10dp">
+    >
 
 
     <RelativeLayout
@@ -136,7 +136,6 @@
         android:layout_height="235dp"
         android:layout_below="@id/stats"
         android:id="@+id/court"
-
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
 
@@ -178,8 +177,8 @@
         android:orientation="horizontal"
         android:layout_below="@id/comments_likes"
         android:weightSum="3"
-        android:background="@color/black"
-
+        android:background="@color/dark_grey"
+        android:id="@+id/likes_comments_share"
         >
 
         <ImageButton
@@ -212,8 +211,12 @@
             android:layout_height="match_parent"
             android:src="@drawable/ic_outline_share_" />
 
-
-
     </LinearLayout>
+    <View
+        android:layout_below="@id/likes_comments_share"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/white"/>
 
 </RelativeLayout>
