--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,12 +92,13 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="110dp"
         android:layout_marginRight="110dp"
-        android:background="@color/nice_purple"
+        android:background="@drawable/rounded_corner"
+        android:backgroundTint="@color/nice_purple"
+        android:textColor="@color/white"
         android:padding="15dp"
         android:text="@string/sign_in_text"
         android:textAllCaps="false"
         android:textSize="14sp"
-        app:backgroundTint="@color/nice_purple"
         app:cornerRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
