--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -105,9 +105,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="110dp"
         android:layout_marginRight="110dp"
-        android:background="@color/nice_purple"
+        android:background="@drawable/rounded_corner"
         android:padding="15dp"
         android:text="Sign up"
+        android:textColor="@color/white"
         android:textAllCaps="false"
         android:textSize="14sp"
         app:backgroundTint="@color/nice_purple"
