--- a/app/src/main/res/layout/row_feed.xml
+++ b/app/src/main/res/layout/row_feed.xml
@@ -1,222 +1,228 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
-    android:background="@color/dark_grey"
-    >
+    android:layout_width="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:clickable="true"
+    android:focusable="true"
+    app:rippleColor="@color/more_light_grey">
 
-
-    <RelativeLayout
-        android:padding="20dp"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/header">
+        android:background="@color/dark_grey">
 
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/row_profile_image"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:src="@mipmap/ic_launcher_round"
-            app:civ_border_width="1dp"
-            app:civ_border_color="#FF000000"
-            />
-
-        <LinearLayout
-            android:paddingLeft="5dp"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:padding="20dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_toRightOf="@id/row_profile_image">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/display_name"/>
-
-            <TextView
-                android:paddingTop="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="11dp"
-                android:id="@+id/display_time"/>
-        </LinearLayout>
+            android:id="@+id/header">
 
 
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/header"
-        android:id="@+id/stats"
-        android:orientation="horizontal"
-        android:paddingHorizontal="10dp">
-
-        <!-- PROSTI METI  -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingHorizontal="10dp">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Free throws"
-                android:textColor="@color/white"
-                android:textSize="11dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/free_throws"
+            <de.hdodenhof.circleimageview.CircleImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/row_profile_image"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@mipmap/ic_launcher_round"
+                app:civ_border_width="1dp"
+                app:civ_border_color="#FF000000"
                 />
 
-        </LinearLayout>
+            <LinearLayout
+                android:paddingLeft="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_toRightOf="@id/row_profile_image">
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/white"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/display_name"/>
 
-        <!-- Trojke  -->
+                <TextView
+                    android:paddingTop="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="11dp"
+                    android:id="@+id/display_time"/>
+            </LinearLayout>
+
+        </RelativeLayout>
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_below="@id/header"
+            android:id="@+id/stats"
+            android:orientation="horizontal"
             android:paddingHorizontal="10dp">
 
-            <TextView
+            <!-- PROSTI METI  -->
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Threes"
-                android:textSize="11dp"
-                />
-            <TextView
+                android:orientation="vertical"
+                android:paddingHorizontal="10dp">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Free throws"
+                    android:textColor="@color/white"
+                    android:textSize="11dp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/free_throws"
+                    />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/white"/>
+
+            <!-- Trojke  -->
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/threes"
-                />
+                android:orientation="vertical"
+                android:paddingHorizontal="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Threes"
+                    android:textSize="11dp"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/threes"
+                    />
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/white"/>
+
+            <!-- Čas  -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingHorizontal="10dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Time"
+                    android:textSize="11dp"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/duration"
+                    />
+
+            </LinearLayout>
+
 
         </LinearLayout>
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:background="@color/white"/>
-
-        <!-- Čas  -->
-        <LinearLayout
+        <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingHorizontal="10dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Time"
-                android:textSize="11dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/duration"
-                />
-
-        </LinearLayout>
-
-
-    </LinearLayout>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="235dp"
-        android:layout_below="@id/stats"
-        android:id="@+id/court"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-
-        android:layout_marginTop="9dp"
-        android:src="@drawable/court2" />
-
-
-    <RelativeLayout
-        android:id="@+id/comments_likes"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/court"
-        android:orientation="horizontal"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="5dp">
-
-        <TextView
-            android:clickable="true"
-            android:id="@+id/likes"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="235dp"
+            android:layout_below="@id/stats"
+            android:id="@+id/court"
+            android:layout_alignParentStart="true"
             android:layout_alignParentLeft="true"
-            android:focusable="true" />
 
-        <TextView
-            android:clickable="true"
-            android:id="@+id/comments"
-            android:layout_width="wrap_content"
+            android:layout_marginTop="9dp"
+            android:src="@drawable/court2" />
+
+
+        <RelativeLayout
+            android:id="@+id/comments_likes"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:focusable="true" />
+            android:layout_below="@id/court"
+            android:orientation="horizontal"
+            android:paddingHorizontal="20dp"
+            android:paddingVertical="5dp">
 
+            <TextView
+                android:clickable="true"
+                android:id="@+id/likes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:focusable="true" />
+
+            <TextView
+                android:clickable="true"
+                android:id="@+id/comments"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:focusable="true" />
+
+
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            android:layout_below="@id/comments_likes"
+            android:weightSum="3"
+            android:background="@color/dark_grey"
+            android:id="@+id/likes_comments_share"
+            >
+
+            <ImageButton
+
+                android:backgroundTint="@color/dark_grey"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/ic_thumb_up" />
+            <View
+                android:layout_gravity="center"
+                android:layout_width="1dp"
+                android:layout_height="30dp"
+                android:background="@color/white"/>
+            <ImageButton
+                android:backgroundTint="@color/dark_grey"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_outline_comment_" />
+            <View
+                android:layout_gravity="center"
+                android:layout_width="1dp"
+                android:layout_height="30dp"
+                android:background="@color/white"/>
+            <ImageButton
+                android:backgroundTint="@color/dark_grey"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_outline_share_" />
+
+        </LinearLayout>
+        <View
+            android:layout_below="@id/likes_comments_share"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/white"/>
 
     </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:layout_below="@id/comments_likes"
-        android:weightSum="3"
-        android:background="@color/dark_grey"
-        android:id="@+id/likes_comments_share"
-        >
-
-        <ImageButton
-
-            android:backgroundTint="@color/dark_grey"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:src="@drawable/ic_thumb_up" />
-        <View
-            android:layout_gravity="center"
-            android:layout_width="1dp"
-            android:layout_height="30dp"
-            android:background="@color/white"/>
-        <ImageButton
-            android:backgroundTint="@color/dark_grey"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_outline_comment_" />
-        <View
-            android:layout_gravity="center"
-            android:layout_width="1dp"
-            android:layout_height="30dp"
-            android:background="@color/white"/>
-        <ImageButton
-            android:backgroundTint="@color/dark_grey"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="match_parent"
-            android:src="@drawable/ic_outline_share_" />
-
-    </LinearLayout>
-    <View
-        android:layout_below="@id/likes_comments_share"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/white"/>
-
-</RelativeLayout>
+</com.google.android.material.card.MaterialCardView>
